--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
   pipeline {
     agent any
     stages {
-      stage('fetch_latest_code') {
+      stage('Git Checkout') {
         steps {
           git branch: 'main', credentialsId: '361d8cd7-ecdc-4d3b-91e0-814681240b8b', url: 'https://github.com/SRK-RAJU/terraform-jenkins-ec2-intigration.git'
         }
